--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1791,6 +1791,7 @@ payload:
   - '+.197946.com'
   - '+.197c.com'
   - '+.198254.com'
+  - '+.19826.net'
   - '+.19831110.com'
   - '+.198358.com'
   - '+.198424.com'
@@ -3314,7 +3315,6 @@ payload:
   - '+.3gdisk.com'
   - '+.3glasses.com'
   - '+.3gmimo.com'
-  - '+.3gods.com'
   - '+.3gogogo.com'
   - '+.3gosc.com'
   - '+.3gpda.net'
@@ -4565,7 +4565,6 @@ payload:
   - '+.52podcast.com'
   - '+.52pojie.com'
   - '+.52ppt.com'
-  - '+.52print.com'
   - '+.52qixiang.com'
   - '+.52qj.com'
   - '+.52qmct.com'
@@ -4878,6 +4877,7 @@ payload:
   - '+.580jz.net'
   - '+.580k.com'
   - '+.580tequan.com'
+  - '+.58160.com'
   - '+.58199.com'
   - '+.582582.com'
   - '+.582hr.com'
@@ -5796,6 +5796,7 @@ payload:
   - '+.77169.net'
   - '+.7717wan.com'
   - '+.7723.com'
+  - '+.7724.com'
   - '+.7724yx.com'
   - '+.7725.com'
   - '+.7729.com'
@@ -6152,6 +6153,7 @@ payload:
   - '+.81it.com'
   - '+.81js.net'
   - '+.81kx.com'
+  - '+.81pan.com'
   - '+.81tech.com'
   - '+.81toutiao.com'
   - '+.81tt.net'
@@ -7551,7 +7553,6 @@ payload:
   - '+.acmicpc.info'
   - '+.acmoba.com'
   - '+.acmsearch.com'
-  - '+.acmx.xyz'
   - '+.acnow.net'
   - '+.aco-musical.com'
   - '+.aconf.org'
@@ -8238,6 +8239,7 @@ payload:
   - '+.aixuetang.com'
   - '+.aixuexi.com'
   - '+.aixyz.com'
+  - '+.aixzu.com'
   - '+.aiyaapp.com'
   - '+.aiyadu.com'
   - '+.aiyangedu.com'
@@ -9754,7 +9756,6 @@ payload:
   - '+.babybus.org'
   - '+.babycdn.com'
   - '+.babyinhere.com'
-  - '+.babymob.com'
   - '+.babymoro.com'
   - '+.babymozart.cc'
   - '+.babyqiming.com'
@@ -11139,6 +11140,7 @@ payload:
   - '+.biquwo.com'
   - '+.biquwu.cc'
   - '+.biquwx.la'
+  - '+.biquxs.com'
   - '+.biquyue.com'
   - '+.biquyun.com'
   - '+.biransign.com'
@@ -11200,7 +11202,6 @@ payload:
   - '+.bivean.com'
   - '+.biwanshequ.com'
   - '+.bixiabook.com'
-  - '+.bixiaobai.com'
   - '+.bixiaxs.net'
   - '+.bixingxing.com'
   - '+.bixinlive.com'
@@ -14270,7 +14271,6 @@ payload:
   - '+.chinacache.cedexis.com'
   - '+.chinacache.com'
   - '+.chinacache.net'
-  - '+.chinacaipu.com'
   - '+.chinacaj.net'
   - '+.chinacamel.com'
   - '+.chinacampus.org'
@@ -15299,7 +15299,6 @@ payload:
   - '+.cjyun.org'
   - '+.cjyyw.com'
   - '+.cjzkw.com'
-  - '+.cjzy.net'
   - '+.cjzzc.com'
   - '+.ck100.com'
   - '+.ck180.net'
@@ -15433,7 +15432,6 @@ payload:
   - '+.cloudp.cc'
   - '+.cloudpense.com'
   - '+.cloudpnr.com'
-  - '+.cloudpre.org'
   - '+.cloudroom.com'
   - '+.cloudsation.com'
   - '+.cloudsea.org'
@@ -16077,7 +16075,6 @@ payload:
   - '+.cnsoftbei.com'
   - '+.cnsoftnews.com'
   - '+.cnsolomo.com'
-  - '+.cnsourcing.org'
   - '+.cnspeed.com'
   - '+.cnspeedtest.com'
   - '+.cnspeedtest.net'
@@ -16266,7 +16263,6 @@ payload:
   - '+.coderzh.com'
   - '+.codes51.com'
   - '+.codesec.net'
-  - '+.codesky.net'
   - '+.codesoft.hk'
   - '+.codesoftchina.com'
   - '+.codesoso.com'
@@ -17937,7 +17933,6 @@ payload:
   - '+.daxueit.com'
   - '+.daxuepc.com'
   - '+.daxueshi.com'
-  - '+.daxuesou.com'
   - '+.daxuesushe.com'
   - '+.daxuewa.com'
   - '+.daxuewang.com'
@@ -18106,6 +18101,7 @@ payload:
   - '+.ddnode.com'
   - '+.ddns-only.xyz'
   - '+.ddnsto.com'
+  - '+.ddnx.com'
   - '+.ddong.com'
   - '+.ddooo.com'
   - '+.ddos.com'
@@ -18634,7 +18630,6 @@ payload:
   - '+.diaox2.com'
   - '+.diaoy.com'
   - '+.diaoyan360.com'
-  - '+.diaoyanbao.com'
   - '+.diaoyou.com'
   - '+.diaoyoupai.com'
   - '+.diaoyu.com'
@@ -18818,7 +18813,6 @@ payload:
   - '+.dishuge.com'
   - '+.dishuizhijia.com'
   - '+.diskgenius.com'
-  - '+.diskgirl.com'
   - '+.disksing.com'
   - '+.dislytegame.com'
   - '+.dismall.com'
@@ -19414,7 +19408,6 @@ payload:
   - '+.doumobsix.site'
   - '+.doumobtech.online'
   - '+.doumpaq.com'
-  - '+.dounimei.net'
   - '+.doupai.cc'
   - '+.doupir.com'
   - '+.doupobook.com'
@@ -19911,7 +19904,6 @@ payload:
   - '+.dwfei.com'
   - '+.dwhub.net'
   - '+.dwinput.com'
-  - '+.dwion.com'
   - '+.dwjoy.com'
   - '+.dwmoniqi.com'
   - '+.dwntme.com'
@@ -20597,7 +20589,6 @@ payload:
   - '+.eecourse.com'
   - '+.eecso.com'
   - '+.eedns.com'
-  - '+.eeduol.com'
   - '+.eee-eee.com'
   - '+.eee114.com'
   - '+.eee4.com'
@@ -22398,7 +22389,6 @@ payload:
   - '+.fireflyacg.com'
   - '+.firefoxbug.com'
   - '+.firefoxcn.com'
-  - '+.firekylin.org'
   - '+.firemail.wang'
   - '+.firetry.com'
   - '+.firhq.com'
@@ -23014,7 +23004,6 @@ payload:
   - '+.fullstack.love'
   - '+.fulu.com'
   - '+.fumake.com'
-  - '+.fuman8.net'
   - '+.fumanyou.cc'
   - '+.fumi.com'
   - '+.fumu.com'
@@ -24448,7 +24437,6 @@ payload:
   - '+.good321.net'
   - '+.goodaiai.com'
   - '+.goodapk.com'
-  - '+.goodapp.net'
   - '+.goodbaby.com'
   - '+.goodbabygroup.com'
   - '+.goodbaike.com'
@@ -25122,9 +25110,11 @@ payload:
   - '+.gvacdn.com'
   - '+.gvi-tech.com'
   - '+.gvlocalization.com'
+  - '+.gvofl.com'
   - '+.gw-dv.net'
   - '+.gw-ec.com'
   - '+.gw2sc.com'
+  - '+.gw66.vip'
   - '+.gw8888.com'
   - '+.gwamcc.com'
   - '+.gwapi.net'
@@ -25355,7 +25345,6 @@ payload:
   - '+.gznemo.com'
   - '+.gznet.com'
   - '+.gzngn.com'
-  - '+.gznote.com'
   - '+.gznxbank.com'
   - '+.gzpeite.com'
   - '+.gzpinda.com'
@@ -26015,7 +26004,6 @@ payload:
   - '+.haoqingjiaju.com'
   - '+.haoqixingstem.com'
   - '+.haoqq.com'
-  - '+.haoquandudu.com'
   - '+.haorc.com'
   - '+.haoread.com'
   - '+.haorencai.net'
@@ -26498,7 +26486,6 @@ payload:
   - '+.hdmooncake.com'
   - '+.hdmtv168.com'
   - '+.hdmv.org'
-  - '+.hdpfans.com'
   - '+.hdpyqa.com'
   - '+.hdpyqc.com'
   - '+.hdpyqd.com'
@@ -29610,6 +29597,7 @@ payload:
   - '+.ieduchina.com'
   - '+.ieduw.com'
   - '+.ieechina.com'
+  - '+.ieee-jas.net'
   - '+.ieeewifi.com'
   - '+.ieeod0.com'
   - '+.ieepa.org'
@@ -29777,7 +29765,6 @@ payload:
   - '+.ihaveu.net'
   - '+.ihdt.tv'
   - '+.ihebi.info'
-  - '+.ihecc.org'
   - '+.ihei5.com'
   - '+.iheima.com'
   - '+.iheima.net'
@@ -30213,6 +30200,7 @@ payload:
   - '+.imys.net'
   - '+.imyshare.com'
   - '+.imyuedu.com'
+  - '+.imzego.com'
   - '+.imzhongxin.com'
   - '+.in-en.com'
   - '+.in001.com'
@@ -31201,7 +31189,6 @@ payload:
   - '+.jacklm2.com'
   - '+.jacklm3.com'
   - '+.jackon.me'
-  - '+.jackslab.org'
   - '+.jackxiang.com'
   - '+.jacky-blog.com'
   - '+.jackyang.me'
@@ -31817,6 +31804,7 @@ payload:
   - '+.jiaoyixia.com'
   - '+.jiaoyizhu.com'
   - '+.jiaoyudao.com'
+  - '+.jiaoyumao.com'
   - '+.jiaoyuwo.com'
   - '+.jiapin.com'
   - '+.jiapu.tv'
@@ -32022,7 +32010,6 @@ payload:
   - '+.jin10x.com'
   - '+.jin24k.com'
   - '+.jinanguanggao.com'
-  - '+.jinantxw.com'
   - '+.jinanxww.com'
   - '+.jinbaiteng.com'
   - '+.jinbaobeiqiming.com'
@@ -34218,7 +34205,6 @@ payload:
   - '+.kimiss.net'
   - '+.kimiter.com'
   - '+.kimleo.net'
-  - '+.kimnote.com'
   - '+.kimqi.net'
   - '+.kimsom.com'
   - '+.kina.cc'
@@ -34536,7 +34522,6 @@ payload:
   - '+.konkamobile.com'
   - '+.konkek2.com'
   - '+.konotaku.com'
-  - '+.konshan.com'
   - '+.kooaoo.com'
   - '+.koocdn.com'
   - '+.koodudu.com'
@@ -34607,7 +34592,6 @@ payload:
   - '+.kpjushi.com'
   - '+.kpkpw.com'
   - '+.kplanet.vip'
-  - '+.kpqtw.com'
   - '+.kprepublic.com'
   - '+.kpzip.com'
   - '+.kpzip.net'
@@ -35185,6 +35169,7 @@ payload:
   - '+.laily.net'
   - '+.laima-tech.com'
   - '+.laimaidi.com'
+  - '+.laina.vip'
   - '+.laipeitu.com'
   - '+.laiqi.net'
   - '+.laiqukankan.com'
@@ -35293,6 +35278,7 @@ payload:
   - '+.langyabang.com'
   - '+.langyuseo.com'
   - '+.langzi.fun'
+  - '+.lanh.love'
   - '+.lanhaicaijing.com'
   - '+.lanhaiweb.net'
   - '+.lanhaizhi.com'
@@ -35581,6 +35567,7 @@ payload:
   - '+.ldmnq.com'
   - '+.ldnovel.com'
   - '+.ldplayer.net'
+  - '+.ldpsfa.com'
   - '+.ldqxn.com'
   - '+.ldshj.com'
   - '+.ldsink.com'
@@ -35779,7 +35766,6 @@ payload:
   - '+.lemo360.com'
   - '+.lemobar.com'
   - '+.lemonyd.com'
-  - '+.lemonyule.com'
   - '+.lemote.com'
   - '+.lempstack.com'
   - '+.lengcat.com'
@@ -35830,7 +35816,6 @@ payload:
   - '+.lequxs.com'
   - '+.lequyuanyi.com'
   - '+.lequz.com'
-  - '+.leqv.online'
   - '+.lerengu.com'
   - '+.lergao.com'
   - '+.lers123.com'
@@ -35882,6 +35867,7 @@ payload:
   - '+.letyo.com'
   - '+.leuok.com'
   - '+.levect.com'
+  - '+.levelinfinite.com'
   - '+.leviding.com'
   - '+.levy.work'
   - '+.lewaila.com'
@@ -37361,7 +37347,6 @@ payload:
   - '+.luffycity.com'
   - '+.lufunds.com'
   - '+.lugir.com'
-  - '+.lugutown521.com'
   - '+.luhao198.com'
   - '+.luhehospital.com'
   - '+.luhongfu.com'
@@ -38310,7 +38295,6 @@ payload:
   - '+.mayihr.com'
   - '+.mayijieqian.com'
   - '+.mayima.net'
-  - '+.mayinews.com'
   - '+.mayishebao.com'
   - '+.mayishoubei.com'
   - '+.mayitek.com'
@@ -38496,7 +38480,6 @@ payload:
   - '+.meibaninc.com'
   - '+.meibanlu.com'
   - '+.meibg.com'
-  - '+.meibo.tv'
   - '+.meican.com'
   - '+.meicanstatic.com'
   - '+.meichibao.com'
@@ -39177,7 +39160,6 @@ payload:
   - '+.mingyueqingfengshe.com'
   - '+.mingzhuxiaoshuo.com'
   - '+.mingzihui.com'
-  - '+.mingzw.net'
   - '+.minhang.cc'
   - '+.minhangshi.com'
   - '+.minhow.com'
@@ -39410,7 +39392,6 @@ payload:
   - '+.mmia.com'
   - '+.mmim8.com'
   - '+.mmimm.com'
-  - '+.mmiyue.com'
   - '+.mmkkiivv.com'
   - '+.mmloo.com'
   - '+.mmm.io'
@@ -40137,7 +40118,6 @@ payload:
   - '+.my51a.com'
   - '+.my5m.com'
   - '+.my5v.com'
-  - '+.my607.com'
   - '+.my68.com'
   - '+.my7v.com'
   - '+.my88316666.com'
@@ -40892,6 +40872,7 @@ payload:
   - '+.nextpcb.com'
   - '+.nextrt.com'
   - '+.nextsee.com'
+  - '+.nextstudios.com'
   - '+.nexttao.com'
   - '+.nexttix.net'
   - '+.nextyu.com'
@@ -47404,6 +47385,7 @@ payload:
   - '+.shallserve.cc'
   - '+.shamiao.com'
   - '+.shan-san.com'
+  - '+.shan-yu-tech.com'
   - '+.shan.com'
   - '+.shanai365.com'
   - '+.shanbay.com'
@@ -47633,7 +47615,6 @@ payload:
   - '+.shcymc.com'
   - '+.shdctp.com'
   - '+.shdjt.com'
-  - '+.shdohai.com'
   - '+.shdrkj.com'
   - '+.shdsd.com'
   - '+.shdzby168.com'
@@ -47668,7 +47649,6 @@ payload:
   - '+.shejis.com'
   - '+.shejiwo.net'
   - '+.shejiye.com'
-  - '+.shejizhaji.com'
   - '+.sheketiandi.com'
   - '+.shekou.com'
   - '+.shelive.net'
@@ -47731,7 +47711,6 @@ payload:
   - '+.shengyasd.com'
   - '+.shengyeji.com'
   - '+.shengyidi.com'
-  - '+.shengynan.com'
   - '+.shengzehr.com'
   - '+.shengzhaoli.com'
   - '+.shengzhouyigou.com'
@@ -47879,7 +47858,6 @@ payload:
   - '+.shijian.cc'
   - '+.shijianla.com'
   - '+.shijiaok.com'
-  - '+.shijibenteng.com'
   - '+.shijicloud.com'
   - '+.shijie2.com'
   - '+.shijiebang.com'
@@ -48992,7 +48970,6 @@ payload:
   - '+.slassgear.com'
   - '+.slatic.net'
   - '+.slchos.com'
-  - '+.sld-cctv.com'
   - '+.sle.group'
   - '+.sleepboy.com'
   - '+.slegetank.com'
@@ -49479,6 +49456,7 @@ payload:
   - '+.soucod.com'
   - '+.soudao.com'
   - '+.soudoc.com'
+  - '+.soudu.org'
   - '+.souduanzu.com'
   - '+.soueast-motor.com'
   - '+.souebao.com'
@@ -49706,6 +49684,7 @@ payload:
   - '+.sreanalyze.com'
   - '+.srell.com'
   - '+.srfip.com'
+  - '+.srgnmsrg.com'
   - '+.srgow.com'
   - '+.srichina.org'
   - '+.sritsoft.com'
@@ -49752,7 +49731,6 @@ payload:
   - '+.ssjjtt.com'
   - '+.ssjlicai.com'
   - '+.ssjyhy.com'
-  - '+.ssjz8.com'
   - '+.ssjzw.com'
   - '+.ssky123.com'
   - '+.sslaaa.com'
@@ -49839,7 +49817,6 @@ payload:
   - '+.starsino.com'
   - '+.starsmicrosystem.com'
   - '+.starstech.cc'
-  - '+.starstech.tech'
   - '+.starstopic.com'
   - '+.starswar.org'
   - '+.start.htc.com'
@@ -50543,6 +50520,7 @@ payload:
   - '+.synacast.com'
   - '+.synball.com'
   - '+.sync.sh'
+  - '+.syncedoffplanet.com'
   - '+.synjones.com'
   - '+.synjones.net'
   - '+.synochip.com'
@@ -50997,7 +50975,6 @@ payload:
   - '+.taiyulink.com'
   - '+.taizibao.com'
   - '+.tajdny.com'
-  - '+.tajyw.net'
   - '+.takungae.com'
   - '+.takungpao.com'
   - '+.taladapp.com'
@@ -51656,7 +51633,6 @@ payload:
   - '+.thaiyuehealth.com'
   - '+.thamco.com'
   - '+.thanhong.me'
-  - '+.thanhtunghairsalon.com'
   - '+.thankbabe.com'
   - '+.thatinterpreter.net'
   - '+.thatsmags.com'
@@ -52717,7 +52693,6 @@ payload:
   - '+.trueeyu.com'
   - '+.trueland.net'
   - '+.trueme.net'
-  - '+.truemv.com'
   - '+.truerun.com'
   - '+.truesing.com'
   - '+.trufun.net'
@@ -53434,6 +53409,7 @@ payload:
   - '+.u9u9.com'
   - '+.ua168.com'
   - '+.uadrc.com'
+  - '+.uami-global.org'
   - '+.uao-online.com'
   - '+.uao.so'
   - '+.uauc.net'
@@ -53919,6 +53895,7 @@ payload:
   - '+.uri6.com'
   - '+.url.cy'
   - '+.url.ms'
+  - '+.urlili.shop'
   - '+.urlos.com'
   - '+.urovo.com'
   - '+.urovoworld.com'
@@ -54424,6 +54401,7 @@ payload:
   - '+.vinkdong.com'
   - '+.vinnywang.com'
   - '+.vinoyang.com'
+  - '+.vinsondata.com'
   - '+.violetgo.com'
   - '+.violinerhu.com'
   - '+.violinstudy.net'
@@ -55060,7 +55038,6 @@ payload:
   - '+.wangminping.com'
   - '+.wangmou.com'
   - '+.wangmou.net'
-  - '+.wangpan007.com'
   - '+.wangpengcufe.com'
   - '+.wangpiao.com'
   - '+.wangpiao.net'
@@ -57300,7 +57277,6 @@ payload:
   - '+.wutongwan.org'
   - '+.wutongxiang.cc'
   - '+.wutos.com'
-  - '+.wutui.pro'
   - '+.wutuojia.com'
   - '+.wuuxiang.com'
   - '+.wuweijob.com'
@@ -58664,7 +58640,6 @@ payload:
   - '+.xihuan.me'
   - '+.xihuanfang.com'
   - '+.xihusgh.com'
-  - '+.xihustateguesthangzhou.com'
   - '+.xiimoon.com'
   - '+.xiji.com'
   - '+.xijiangtv.com'
@@ -60302,7 +60277,6 @@ payload:
   - '+.yanglingxi.com'
   - '+.yanglong.pro'
   - '+.yangluojob.com'
-  - '+.yangluoxw.com'
   - '+.yangmao.info'
   - '+.yangmaodang.org'
   - '+.yangmaohao.net'
@@ -60854,6 +60828,7 @@ payload:
   - '+.yhzy365.com'
   - '+.yi-jy.com'
   - '+.yi-you.org'
+  - '+.yi-yun-tong.com'
   - '+.yi114.com'
   - '+.yi2.net'
   - '+.yi588.com'
@@ -61270,7 +61245,6 @@ payload:
   - '+.yisanwu.com'
   - '+.yisell.com'
   - '+.yishalai.com'
-  - '+.yisharepdf.site'
   - '+.yishengfanyi.com'
   - '+.yishihui.com'
   - '+.yishion.com'
@@ -62110,7 +62084,6 @@ payload:
   - '+.ypank.com'
   - '+.ypgyyq.com'
   - '+.yph-shop.com'
-  - '+.yphtg.com'
   - '+.yphuifu.com'
   - '+.ypicw.com'
   - '+.ypjiameng.com'
@@ -63670,7 +63643,6 @@ payload:
   - '+.zh30.com'
   - '+.zh51home.com'
   - '+.zhai14.com'
-  - '+.zhai6.com'
   - '+.zhaiba.com'
   - '+.zhaidou.com'
   - '+.zhaifu.cc'
@@ -63993,7 +63965,6 @@ payload:
   - '+.zhgqt.com'
   - '+.zhgsw.com'
   - '+.zhguoguo.com'
-  - '+.zhh.me'
   - '+.zhhainiao.com'
   - '+.zhhbqg.com'
   - '+.zhhrm.com'
@@ -64274,7 +64245,6 @@ payload:
   - '+.zhongdi168.com'
   - '+.zhongdoulicai.com'
   - '+.zhongfenxian.com'
-  - '+.zhongfenxiang.com'
   - '+.zhongfu.net'
   - '+.zhongguobaiyin.com'
   - '+.zhongguoditu.com'
@@ -64625,7 +64595,6 @@ payload:
   - '+.zhuyitai.com'
   - '+.zhuyixie.com'
   - '+.zhuyst.cc'
-  - '+.zhuyuce.com'
   - '+.zhuyunfeng.com'
   - '+.zhuzhai.com'
   - '+.zhuzher.com'
@@ -65246,7 +65215,6 @@ payload:
   - '+.zooyoo.cc'
   - '+.zoroli.com'
   - '+.zorrospray.com'
-  - '+.zorrowh.com'
   - '+.zou.la'
   - '+.zou114.com'
   - '+.zoubiao.com'
@@ -65728,7 +65696,6 @@ payload:
   - '+.zxzyy.com'
   - '+.zy-cam.com'
   - '+.zy147.com'
-  - '+.zy2071.com'
   - '+.zy728.com'
   - '+.zy91.com'
   - '+.zyan.cc'
