--- a/directbak.yaml
+++ b/directbak.yaml
@@ -271,6 +271,7 @@ payload:
   - '+.029yjy.com'
   - '+.029yljj.com'
   - '+.029zp.com'
+  - '+.029ztxx.com'
   - '+.02edu.com'
   - '+.02kdid.com'
   - '+.02lu.com'
@@ -291,7 +292,6 @@ payload:
   - '+.033033.com'
   - '+.0335e.com'
   - '+.03412.com'
-  - '+.03414.com'
   - '+.034666.com'
   - '+.0349.info'
   - '+.035110000.com'
@@ -832,7 +832,6 @@ payload:
   - '+.10185.com'
   - '+.101hr.com'
   - '+.101jiajiao.com'
-  - '+.101jm.net'
   - '+.101weiqi.com'
   - '+.1020m.com'
   - '+.1024.com'
@@ -1773,7 +1772,6 @@ payload:
   - '+.18zw.com'
   - '+.1903it.com'
   - '+.1905.com'
-  - '+.1905kk.com'
   - '+.190757.com'
   - '+.191.com'
   - '+.19196.com'
@@ -2220,7 +2218,6 @@ payload:
   - '+.22zy.net'
   - '+.2300sjz.com'
   - '+.230596.com'
-  - '+.230book.com'
   - '+.231122.com'
   - '+.231327.com'
   - '+.232232.xyz'
@@ -2702,7 +2699,6 @@ payload:
   - '+.324.com'
   - '+.3259.com'
   - '+.32800.com'
-  - '+.3289.com'
   - '+.328f.com'
   - '+.32bh.com'
   - '+.32ka.com'
@@ -3254,7 +3250,6 @@ payload:
   - '+.3cwu.com'
   - '+.3d-stereovision.com'
   - '+.3d2000.com'
-  - '+.3d2s.com'
   - '+.3d56.net'
   - '+.3d66.com'
   - '+.3daima.com'
@@ -5620,7 +5615,6 @@ payload:
   - '+.700live.com'
   - '+.700so.com'
   - '+.700static.com'
-  - '+.700store.com'
   - '+.701.com'
   - '+.7017k.com'
   - '+.701sou.com'
@@ -6937,7 +6931,6 @@ payload:
   - '+.95862788.com'
   - '+.9588.com'
   - '+.959249.com'
-  - '+.95949c.com'
   - '+.9596956.com'
   - '+.95book.com'
   - '+.95en.com'
@@ -8866,7 +8859,6 @@ payload:
   - '+.anweizhi.com'
   - '+.anwen.cc'
   - '+.anxcn.com'
-  - '+.anxhu.com'
   - '+.anxia.com'
   - '+.anxiaoer.com'
   - '+.anxin.com'
@@ -9277,7 +9269,6 @@ payload:
   - '+.arp.cc'
   - '+.arpg2.com'
   - '+.arpun.com'
-  - '+.arrail-dental.com'
   - '+.arrow-tower.com'
   - '+.arrowos.net'
   - '+.art-ba-ba.com'
@@ -10910,7 +10901,6 @@ payload:
   - '+.bifeige.com'
   - '+.big-bit.com'
   - '+.big-shanghai.com'
-  - '+.big-site.com'
   - '+.bigaaa.net'
   - '+.bigaka.com'
   - '+.bigan.net'
@@ -11107,6 +11097,7 @@ payload:
   - '+.biqugegg.cc'
   - '+.biqugemm.com'
   - '+.biquges.com'
+  - '+.biqugesk.org'
   - '+.biqugetv.com'
   - '+.biqugew.com'
   - '+.biqugewx.com'
@@ -11954,6 +11945,7 @@ payload:
   - '+.bqg26.com'
   - '+.bqg8.cc'
   - '+.bqg8.la'
+  - '+.bqg99.cc'
   - '+.bqgyy.com'
   - '+.bqiapp.com'
   - '+.bqimg.com'
@@ -12041,6 +12033,7 @@ payload:
   - '+.bstjiaoyu.com'
   - '+.bstzcs.com'
   - '+.bsurl.cc'
+  - '+.bswtan.com'
   - '+.bsyjrb.com'
   - '+.bsyxx.com'
   - '+.bt.cc'
@@ -12203,7 +12196,6 @@ payload:
   - '+.buy360.vip'
   - '+.buyanshufa.com'
   - '+.buyaocha.com'
-  - '+.buybieshu.com'
   - '+.buycarcn.com'
   - '+.buychuan.com'
   - '+.buycoor.com'
@@ -13916,7 +13908,6 @@ payload:
   - '+.cheng95.com'
   - '+.cheng95.net'
   - '+.chengadx.com'
-  - '+.chengbanren02.com'
   - '+.chengchuanren.com'
   - '+.chengdebank.com'
   - '+.chengdechina.com'
@@ -15806,7 +15797,6 @@ payload:
   - '+.cngb.org'
   - '+.cngba.com'
   - '+.cngbdl.com'
-  - '+.cngdwx.com'
   - '+.cnggt120.com'
   - '+.cngin.com'
   - '+.cngnu.net'
@@ -19773,6 +19763,7 @@ payload:
   - '+.duoduozhifu.com'
   - '+.duoente.net'
   - '+.duoerpharmacy.com'
+  - '+.duofriend.com'
   - '+.duofull.com'
   - '+.duogouhui.com'
   - '+.duohou.net'
@@ -20675,7 +20666,6 @@ payload:
   - '+.eggjs.org'
   - '+.eggscute.com'
   - '+.eggtt.com'
-  - '+.egonetworks.org'
   - '+.egongzheng.com'
   - '+.egoonet.com'
   - '+.egotops.com'
@@ -21078,7 +21068,6 @@ payload:
   - '+.erdianzhang.com'
   - '+.erdong.site'
   - '+.erdosrcb.com'
-  - '+.ere3j2e001.com'
   - '+.erentalcarpro.com'
   - '+.ereuiib.com'
   - '+.erfdhiu.com'
@@ -22880,7 +22869,6 @@ payload:
   - '+.fsc555.com'
   - '+.fscinda.com'
   - '+.fsclzs.com'
-  - '+.fsdhub.com'
   - '+.fsecity.com'
   - '+.fsesa.com'
   - '+.fsfund.com'
@@ -23144,7 +23132,6 @@ payload:
   - '+.fxyfmp.com'
   - '+.fxzhj.com'
   - '+.fxzhjapp.com'
-  - '+.fxzpfyy.com'
   - '+.fxzygc.com'
   - '+.fy-data.com'
   - '+.fy-game.com'
@@ -23309,7 +23296,6 @@ payload:
   - '+.galaxyns.net'
   - '+.galeo.me'
   - '+.galgamezs.com'
-  - '+.galiaoba.com'
   - '+.gallopgazelle.com'
   - '+.galstars.net'
   - '+.galsun.com'
@@ -24365,7 +24351,6 @@ payload:
   - '+.gomeholdings.com'
   - '+.gomehome.com'
   - '+.gomeplus.com'
-  - '+.gomesell.com'
   - '+.gomo.com'
   - '+.gonever.com'
   - '+.gong123.com'
@@ -24777,6 +24762,7 @@ payload:
   - '+.gtm-i1d6.com'
   - '+.gtm-i1d7.com'
   - '+.gtm-i1d9.com'
+  - '+.gtm-i2d8.com'
   - '+.gtmlufax.com'
   - '+.gtn9.com'
   - '+.gto365.com'
@@ -25697,6 +25683,7 @@ payload:
   - '+.haiyunx.com'
   - '+.haiyusoft.com'
   - '+.haizhangs.com'
+  - '+.haizhanweb.com'
   - '+.haizhixing.net'
   - '+.haizhlink.com'
   - '+.haizhoumo.com'
@@ -27200,6 +27187,7 @@ payload:
   - '+.hkcd.com'
   - '+.hkcgart.com'
   - '+.hkcna.hk'
+  - '+.hkcoalition.com'
   - '+.hkcts.com'
   - '+.hkctshotels.com'
   - '+.hkctsmembers.com'
@@ -27395,6 +27383,7 @@ payload:
   - '+.hnmdtv.com'
   - '+.hnmgjr.com'
   - '+.hnmj.vip'
+  - '+.hnmrffm888.com'
   - '+.hnmsw.com'
   - '+.hnmuseum.com'
   - '+.hnnx.com'
@@ -27447,6 +27436,7 @@ payload:
   - '+.hnxfpfb.com'
   - '+.hnxgzg.com'
   - '+.hnxmxit.com'
+  - '+.hnxttv.com'
   - '+.hnxuntang.com'
   - '+.hnxyjt.com'
   - '+.hnydmq.com'
@@ -27745,7 +27735,6 @@ payload:
   - '+.hp-marathon.com'
   - '+.hp123.com'
   - '+.hp888.com'
-  - '+.hpcanon.com'
   - '+.hpccake.com'
   - '+.hpcoo.com'
   - '+.hpdwfd2.com'
@@ -29371,7 +29360,6 @@ payload:
   - '+.icoc.in'
   - '+.icoc.me'
   - '+.icocg.com'
-  - '+.icode9.com'
   - '+.icodelogic.com'
   - '+.icoderobot.com'
   - '+.icofchina.com'
@@ -29762,6 +29750,7 @@ payload:
   - '+.ihei5.com'
   - '+.iheima.com'
   - '+.iheima.net'
+  - '+.ihelpy.net'
   - '+.ihengheng.com'
   - '+.ihenji.com'
   - '+.ihepa.com'
@@ -30353,6 +30342,7 @@ payload:
   - '+.intelcupid.com'
   - '+.intelligentmanufactory.com'
   - '+.intelvisioncn.com'
+  - '+.inter-mba.org'
   - '+.inter12.org'
   - '+.inter1908.net'
   - '+.interactivebrokers.hk'
@@ -30719,6 +30709,7 @@ payload:
   - '+.isvjcloud.com'
   - '+.isvjd.com'
   - '+.iswifting.com'
+  - '+.isyour.love'
   - '+.it-api.com'
   - '+.it-bound.com'
   - '+.it-crazy.net'
@@ -31163,6 +31154,7 @@ payload:
   - '+.izt6.com'
   - '+.izt8.com'
   - '+.iztwp.com'
+  - '+.iztyy.com'
   - '+.izuche.com'
   - '+.izuchecdn.com'
   - '+.izuiyou.com'
@@ -32371,7 +32363,6 @@ payload:
   - '+.jiusitm.com'
   - '+.jiusongjiankang.com'
   - '+.jiutu.net'
-  - '+.jiututa.com'
   - '+.jiuwa.net'
   - '+.jiuwan.com'
   - '+.jiuwei.net'
@@ -32495,7 +32486,6 @@ payload:
   - '+.jjmmw.com'
   - '+.jjnz.com'
   - '+.jjonline.org'
-  - '+.jjplane.com'
   - '+.jjppt.com'
   - '+.jjqj.net'
   - '+.jjsedu.org'
@@ -32845,7 +32835,6 @@ payload:
   - '+.jqcool.net'
   - '+.jqdto.com'
   - '+.jqdzw.com'
-  - '+.jqfax.com'
   - '+.jqgc.com'
   - '+.jqgcw.com'
   - '+.jqhtml.com'
@@ -33102,6 +33091,7 @@ payload:
   - '+.jtv123.com'
   - '+.jtyjy.com'
   - '+.jtyy.com'
+  - '+.jtzhuan.xyz'
   - '+.ju33.com'
   - '+.ju51.com'
   - '+.ju81.cc'
@@ -33284,6 +33274,7 @@ payload:
   - '+.jupup.com'
   - '+.juqi.com'
   - '+.juqingjuqing.com'
+  - '+.juqk.net'
   - '+.juren.com'
   - '+.jurenqi.com'
   - '+.jurongfangchan.com'
@@ -35891,7 +35882,6 @@ payload:
   - '+.leyaoyao.org'
   - '+.leyard.com'
   - '+.leybc.com'
-  - '+.leyben.com'
   - '+.leyifan.com'
   - '+.leying.com'
   - '+.leying.org'
@@ -36498,7 +36488,6 @@ payload:
   - '+.lis99.com'
   - '+.lisa33xiaoq.net'
   - '+.lisdn.com'
-  - '+.lisen.me'
   - '+.lishi.com'
   - '+.lishi6.com'
   - '+.lishibu.com'
@@ -36811,7 +36800,6 @@ payload:
   - '+.lmtw.com'
   - '+.lmtxz1.com'
   - '+.lmubbs.com'
-  - '+.lmview.com'
   - '+.lmwgame.com'
   - '+.lmwlhh.com'
   - '+.lmwljz.com'
@@ -37207,7 +37195,6 @@ payload:
   - '+.lrscloud3.com'
   - '+.lrswl.com'
   - '+.lrts.me'
-  - '+.lrwoman.com'
   - '+.ls-17.com'
   - '+.ls-gb.com'
   - '+.ls-marathon.com'
@@ -38663,7 +38650,6 @@ payload:
   - '+.mems.me'
   - '+.memsconsulting.com'
   - '+.memseminar.com'
-  - '+.memsensor.com'
   - '+.memuu.com'
   - '+.men.ci'
   - '+.menchuang.biz'
@@ -38790,6 +38776,7 @@ payload:
   - '+.mgdzz.com'
   - '+.mgenware.com'
   - '+.mgff.com'
+  - '+.mgjianshe.com'
   - '+.mgl9.com'
   - '+.mglip.com'
   - '+.mgogo.com'
@@ -38926,7 +38913,6 @@ payload:
   - '+.micro-bee.com'
   - '+.micro-servs.com'
   - '+.microad-cn.com'
-  - '+.microad-z.com'
   - '+.microbell.com'
   - '+.microbt.com'
   - '+.microcai.org'
@@ -39584,7 +39570,6 @@ payload:
   - '+.mojicb.com'
   - '+.mojicdn.com'
   - '+.mojichina.com'
-  - '+.mojidong.com'
   - '+.mojieai.com'
   - '+.mojitest.com'
   - '+.mojocube.com'
@@ -40543,6 +40528,7 @@ payload:
   - '+.nb888888.com'
   - '+.nba008.com'
   - '+.nbabm.com'
+  - '+.nbadpark.com'
   - '+.nbahero.com'
   - '+.nbahi.com'
   - '+.nbahjx.com'
@@ -42391,6 +42377,7 @@ payload:
   - '+.paizhe.com'
   - '+.paizi.com'
   - '+.pajkb.com'
+  - '+.pajkdc.com'
   - '+.palace-international.com'
   - '+.palanceli.com'
   - '+.palm-h.com'
@@ -43023,7 +43010,6 @@ payload:
   - '+.piios.com'
   - '+.piis.pw'
   - '+.pikacn.com'
-  - '+.pikatao.com'
   - '+.pilaipiwang.com'
   - '+.pili-zz.net'
   - '+.pilibaba.com'
@@ -43178,7 +43164,6 @@ payload:
   - '+.pjtx.net'
   - '+.pk052.com'
   - '+.pk106.com'
-  - '+.pk10fh.com'
   - '+.pk1352.com'
   - '+.pk1xia.com'
   - '+.pk2234.com'
@@ -44207,7 +44192,6 @@ payload:
   - '+.qiansw.com'
   - '+.qiantucdn.com'
   - '+.qianvisa.com'
-  - '+.qianw.com'
   - '+.qianwa.com'
   - '+.qianwee.com'
   - '+.qianxiangbank.com'
@@ -44621,7 +44605,6 @@ payload:
   - '+.qivsod.com'
   - '+.qiwen001.com'
   - '+.qiwen007.com'
-  - '+.qiwen8.com'
   - '+.qiwendi.com'
   - '+.qiwenhui.com'
   - '+.qixia.ltd'
@@ -44813,7 +44796,6 @@ payload:
   - '+.qpzq.net'
   - '+.qq-xmail.com'
   - '+.qq.cc'
-  - '+.qq.ci'
   - '+.qq.com'
   - '+.qq.do'
   - '+.qq.net'
@@ -44833,7 +44815,6 @@ payload:
   - '+.qq7c.com'
   - '+.qq8868.com'
   - '+.qq933.com'
-  - '+.qqahz.net'
   - '+.qqaiqin.com'
   - '+.qqaku.com'
   - '+.qqan.com'
@@ -45056,7 +45037,6 @@ payload:
   - '+.quanfangtongvip.com'
   - '+.quanfeng.tech'
   - '+.quanguoban.com'
-  - '+.quanji.com'
   - '+.quanji.la'
   - '+.quanji.net'
   - '+.quanji55.com'
@@ -47530,7 +47510,6 @@ payload:
   - '+.shanzhen.com'
   - '+.shanzhen.me'
   - '+.shanzhonglei.com'
-  - '+.shaodts.net'
   - '+.shaoerbc.org'
   - '+.shaoerbianchengwang.com'
   - '+.shaogood.com'
@@ -49409,6 +49388,7 @@ payload:
   - '+.soq.com'
   - '+.soqicrm.com'
   - '+.soquair.com'
+  - '+.soripan.net'
   - '+.sorpack.com'
   - '+.sos919.com'
   - '+.sosaw.com'
@@ -49720,7 +49700,6 @@ payload:
   - '+.ssjjss.com'
   - '+.ssjjtt.com'
   - '+.ssjlicai.com'
-  - '+.ssjyhy.com'
   - '+.ssjzw.com'
   - '+.ssky123.com'
   - '+.sslaaa.com'
@@ -50101,6 +50080,7 @@ payload:
   - '+.suncafe.cc'
   - '+.suncco.com'
   - '+.sundan.com'
+  - '+.sundayrx.net'
   - '+.sundns.com'
   - '+.sundray.com'
   - '+.sundung.com'
@@ -51999,6 +51979,7 @@ payload:
   - '+.tingclass.net'
   - '+.tingdegang.com'
   - '+.tingfun.net'
+  - '+.tinghen.com'
   - '+.tingjiandan.com'
   - '+.tingke8.com'
   - '+.tingliku.com'
@@ -53883,7 +53864,6 @@ payload:
   - '+.urgc.net'
   - '+.uri6.com'
   - '+.url.cy'
-  - '+.url.ms'
   - '+.urlili.shop'
   - '+.urlos.com'
   - '+.urovo.com'
@@ -55764,7 +55744,6 @@ payload:
   - '+.wendal.net'
   - '+.wendangdaquan.com'
   - '+.wendangku.net'
-  - '+.wendangmao.com'
   - '+.wendangmao.net'
   - '+.wendangwang.com'
   - '+.wendangxiazai.com'
@@ -55906,7 +55885,6 @@ payload:
   - '+.weti.me'
   - '+.wetogame.com'
   - '+.weton.net'
-  - '+.wetouch.net'
   - '+.wetruetech.com'
   - '+.wetsd.com'
   - '+.wetv.vip'
@@ -55994,6 +55972,7 @@ payload:
   - '+.whairport.com'
   - '+.whalecloud.com'
   - '+.whaledu.com'
+  - '+.whalenas.com'
   - '+.whaleunique.com'
   - '+.whalipaycs.com'
   - '+.whart.net'
@@ -56739,6 +56718,7 @@ payload:
   - '+.wogame.net'
   - '+.wogoo.com'
   - '+.wohenizaiyiqi.com'
+  - '+.woheyun.xyz'
   - '+.wohxx.com'
   - '+.woi3d.com'
   - '+.woiyu.com'
@@ -56762,6 +56742,7 @@ payload:
   - '+.woliuda.com'
   - '+.wolonge.com'
   - '+.wolongge.com'
+  - '+.wolongimg.com'
   - '+.wolongyin.com'
   - '+.wolongyoule.com'
   - '+.wolwo.ltd'
@@ -57421,7 +57402,6 @@ payload:
   - '+.wxguan.com'
   - '+.wxgz.net'
   - '+.wxhand.com'
-  - '+.wxhbts.com'
   - '+.wxhon.com'
   - '+.wxhouse.com'
   - '+.wxhu.net'
@@ -58412,7 +58392,6 @@ payload:
   - '+.xiaoshuo570.com'
   - '+.xiaoshuoba.com'
   - '+.xiaoshuobi.cc'
-  - '+.xiaoshuochen.com'
   - '+.xiaoshuodaquan.com'
   - '+.xiaoshuoli.com'
   - '+.xiaoshuoshu.org'
@@ -60637,7 +60616,6 @@ payload:
   - '+.yeoner.com'
   - '+.yeree.com'
   - '+.yes-chinese.com'
-  - '+.yes-med.net'
   - '+.yes515.com'
   - '+.yes58.net'
   - '+.yes88.com'
@@ -60675,7 +60653,6 @@ payload:
   - '+.yeswan.com'
   - '+.yesxia.com'
   - '+.yesxun.com'
-  - '+.yetang.com'
   - '+.yetianzi.com'
   - '+.yetingjk.com'
   - '+.yewen.us'
@@ -60938,7 +60915,6 @@ payload:
   - '+.yiibook.com'
   - '+.yiichina.com'
   - '+.yiigle.com'
-  - '+.yiiheng.com'
   - '+.yiihuu.com'
   - '+.yiii.net'
   - '+.yiiwoo.com'
@@ -61445,6 +61421,7 @@ payload:
   - '+.ylbgw1.com'
   - '+.ylcs.cc'
   - '+.yldh.cc'
+  - '+.yle888.vip'
   - '+.ylfx.com'
   - '+.ylg877.com'
   - '+.ylghsj.com'
@@ -62030,7 +62007,6 @@ payload:
   - '+.youzhuan.com'
   - '+.youzhuanhua.com'
   - '+.youzi02.com'
-  - '+.youzi100.com'
   - '+.youzibank.com'
   - '+.youzibuy.com'
   - '+.youzijie.com'
@@ -63502,7 +63478,6 @@ payload:
   - '+.zgjf168.com'
   - '+.zgjhjy.com'
   - '+.zgjiemeng.com'
-  - '+.zgjinsu.com'
   - '+.zgjjzyjy.org'
   - '+.zgjm.net'
   - '+.zgjm.org'
@@ -63760,7 +63735,6 @@ payload:
   - '+.zhaodll.com'
   - '+.zhaofangbang.net'
   - '+.zhaofanguan.com'
-  - '+.zhaofile.com'
   - '+.zhaofinger.com'
   - '+.zhaogang.com'
   - '+.zhaogangimg.com'
@@ -65760,7 +65734,6 @@ payload:
   - '+.zyxr.com'
   - '+.zyxuan.org'
   - '+.zyxzcm.com'
-  - '+.zyyda.com'
   - '+.zyyfy.com'
   - '+.zyz119.com'
   - '+.zyzaojiao.com'
